# VLXI-Cookiecutter-Research

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.template  NOTICE  README-Template-Usage.md  README.markdown  README.md  README.md.template  RELEASE-NOTES.md  cookiecutter.json  pyproject.toml  requirements.txt
.jupyter/: jupyter_notebook_config.py
RELEASE-NOTES/: Release-Notes-0.1.markdown
config/: env  env.template  envrc.template
config/autoenv/: env.template
config/direnv/: envrc.template
customizations/: README.md  dot-gitignore
docs/: FastDS-Quick-Reference.md  Julia-Quick-Reference.md  MLflow-Quick-Reference.md  Poetry-Quick-Reference.md  Project-Structure-Reference.md
extras/: dot-envrc  env.template  envrc.template
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
spikes/: jupyter_notebook_config.py
template/: README.md  dot-envrc  requirements-additions.txt  requirements.txt
template-docs/: LICENSE-Data-Science-Project-Template  LICENSE-Data_Science_Project_Template  README-Data-Science-Project-Template.md  RELEASE-NOTES-Data-Science-Project-Template.md
template-docs/extras/: env.template  envrc.example
template/src/: utils.py
templates/: dot-gitignore  requirements.txt
{{cookiecutter.__project_name}}/: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Project.toml  README.md  pyproject.toml
{{cookiecutter.__project_name}}/.jupyter/nbconfig/: notebook.json
{{cookiecutter.__project_name}}/extras/: dot-envrc
{{cookiecutter.__project_name}}/extras/quick-references/: Jupyter-Quick-Reference.md  Poetry-Quick-Reference.md  Project-Environment.md  pyenv-Quick-Reference.md
{{cookiecutter.project_directory}}/: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_directory}}/docs/references/: API-Documentation-Generation.md  Automated-Testing.md  FastDS-Quick-Reference.md  Julia-Quick-Reference.md  Jupyter-Quick-Reference.md  MLflow-Quick-Reference.md  Poetry-Quick-Reference.md
{{cookiecutter.project_directory}}/docs/references/Quick-References/: FastDS-Quick-Reference.md  Poetry-Quick-Reference.md  pdoc-Quick-Reference.md  pyenv-Quick-Reference.md
{{cookiecutter.project_directory}}/extras/: dot-envrc
{{cookiecutter.project_directory}}/notebooks/: 2022-04-23-KC-Research_Notebook_Example.ipynb
{{cookiecutter.project_directory}}/src/: utils.py
{{cookiecutter.project_directory}}/tests/: test_utils.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/docs/references/Quick-References/: Automated-Testing.md
{{cookiecutter.project_name}}/extras/: dot-envrc
{{cookiecutter.project_name}}/notebooks/: 2022-04-23-KC-Research_Notebook_Example.ipynb
