[tool.poetry]
name = "{{ cookiecutter.__project_name }}"
version = "0.0.0"
description = ""
license = "{% if cookiecutter.license == 'Apache License 2.0' %}Apache-2.0{% elif cookiecutter.license == 'BSD-3-Clause License' %}BSD-3-Clause{% elif cookiecutter.license == 'MIT License' %}MIT{% endif %}"
readme = "README.md"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

# data management
dvc = {extras = ["s3"], version = "^3.0"}
fds = {git = "https://github.com/velexi-research/fds.git"}  # Fork of FastDS

# research infrastructure
ipython = "^8.0"
jupyter-dash = "^0.4.2"
jupyterlab = "^4.0"
matplotlib = "^3.7.1"
mlflow = "^2.4"

# miscellaneous utilities
pdoc = "^14.0"
python-slugify = "^8.0"
PyYAML = "^6.0"
tqdm = "^4.64"
typer = "^0,>=0.9"

# software testing
coverage = "^7.0"
pylint = "^2.14"
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-flake8 = "^1.1.1"
pytest-pylint = "^0,>=0.18"
pytest-xdist = "^3.0"

# code quality
black = {extras = ["jupyter"], version = "^23.0"}
flake8 = "<5.0.0"  # Unpin after compatibility with pytest-flake8 is fixed
pre-commit = "^3.2"

# security vulnerability fixes
pywin32 = [
    { version = '>=301', platform = 'win32' },
]

# project-specific packages

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --flake8 --cov --cov-report="
testpaths = [
    "src",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
]
norecursedirs = ["data", "docs", "extras", "notebooks", "reports", "spikes"]

[tool.coverage.run]
source = ["src/"]

[tool.coverage.report]
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
