[tool.poetry]
name = "{{ cookiecutter.__project_name }}"
version = "0.0.0"
description = ""
license = "{% if cookiecutter.license == 'Apache License 2.0' %}Apache-2.0{% elif cookiecutter.license == 'BSD-3-Clause License' %}BSD-3-Clause{% elif cookiecutter.license == 'MIT License' %}MIT{% endif %}"
readme = "README.md"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
package-mode = false

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

# data management
dvc = {extras = ["s3"], version = "^3"}
fds = {git = "https://github.com/velexi-research/fds.git"}  # Fork of FastDS

# research infrastructure
ipython = "^9"
jupyter-dash = "^0,>=0.4.2"
jupyterlab = "^4"
jupyterlab-mathjax3 = "^4"
matplotlib = "^3"
mlflow = "^3"

# miscellaneous utilities
pdoc = "^15"
python-slugify = "^8"
PyYAML = "^6"
tqdm = "^4"
typer = "^0,>=0.12"

# software testing
coverage = "^7"
pytest = "^8"
pytest-cov = "^6"
pytest-xdist = "^3"

# code quality
black = {extras = ["jupyter"], version = "^25"}
flake8 = "^7"
pre-commit = "^4"
radon = "^6"

# security vulnerability fixes
pywin32 = [
    { version = '>=301', platform = 'win32' },
]

# project-specific packages

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --cov --cov-report="
testpaths = [
    "src",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
]
norecursedirs = ["data", "docs", "extras", "notebooks", "reports", "spikes"]

[tool.coverage.run]
source = ["src/"]

[tool.coverage.report]
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
