[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
description = ""
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = {extras = ["all"], version = "^2.17"}
fastds = "^0,>=0.6"
ipython = "^8.4"
jupyterlab = "^3.4"
mlflow = "^1.27"
pdoc3 = "^0,>=0.10"
python-slugify = "^6.1"
PyYAML = ">=5.4"
tqdm = "^4.64"
typer = "^0,>=0.6"

# security vulnerability fixes
jupyter-server = "^1.18"
#mistune = "^2.0.3"
pywin32 = [
    { version = '>=301', platform = 'win32' },
]

[tool.poetry.dev-dependencies]
# TODO: change section name to [tool.poetry.group.dev.dependencies]
#       after poetry 1.2.0 is released.
coverage = "^6.4"
flake8 = "^5.0"
pylint = "^2.14"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-flake8 = "^1.1"
pytest-pylint = "^0,>=0.18"
pytest-xdist = "^2.5"
radon = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
