[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
description = ""
license = "{% if cookiecutter.license == 'Apache License 2.0' %}Apache-2.0{% elif cookiecutter.license == 'BSD-3-Clause License' %}BSD-3-Clause{% elif cookiecutter.license == 'MIT License' %}MIT{% endif %}"
readme = "README.md"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^3.2.2"
dvc = {extras = ["all"], version = "^2.17"}
fastds = "^0,>=0.6"
ipython = "^8.4"
jupyterlab = "^3.4"
mlflow = "^1.27"
pdoc3 = "^0,>=0.10"
python-slugify = "^6.1"
PyYAML = ">=5.4"
tqdm = "^4.64"
typer = "^0,>=0.6"

# security vulnerability fixes
#mistune = "^2.0.3"
pywin32 = [
    { version = '>=301', platform = 'win32' },
]

[tool.poetry.group.test.dependencies]
coverage = "^6.4"
flake8 = "^5.0"
pylint = "^2.14"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-flake8 = "^1.1"
pytest-pylint = "^0,>=0.18"
pytest-xdist = "^2.5"
radon = "^5.1"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py27, py36

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
